--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_activity"
+    tools:context=".myactivities.home_activity"
     tools:showIn="@layout/activity_home"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
