--- a/app/src/main/res/layout/fragment_radio_frag.xml
+++ b/app/src/main/res/layout/fragment_radio_frag.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".radio_frag">
+    tools:context=".fragments.radio_frag">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
